--- a/main.tex
+++ b/main.tex
@@ -56,8 +56,9 @@
 \usepackage{amsmath}
 %\usepackage{fullpage}
 \usepackage{microtype}
-\usepackage{biblatex}
+\usepackage[backend=biber]{biblatex}
 \usepackage{float}
+\usepackage{csquotes}
 
 \title{Étude de marché de la Citroën Cactus}
 \author{Marc \textsc{Autrand}, Timothée \textsc{Pallot}, Edouard
@@ -272,6 +273,8 @@ qui sont attirés par son style, son design, ses couleurs.
 \break
 \part{Analyse des résultats du sondage}
 
+\section{Âge et sexe}
+
 
 
 \begin{knitrout}
@@ -305,6 +308,8 @@ qui sont attirés par son style, son design, ses couleurs.
 
 
 \end{knitrout}
+
+\section{Marketing}
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
@@ -340,6 +345,8 @@ qui sont attirés par son style, son design, ses couleurs.
 
 \end{knitrout}
 
+\section{Apparence de la voiture}
+
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
 \includegraphics[width=\maxwidth]{figure/design_fr-1} \caption[Nuage de mots de l'avis du design de la C4 Cactus des personnes ayant répondu au sondage français]{Nuage de mots de l'avis du design de la C4 Cactus des personnes ayant répondu au sondage français}\label{fig:design fr}
@@ -372,6 +379,8 @@ qui sont attirés par son style, son design, ses couleurs.
 
 \end{knitrout}
 
+\section{Opinion générale}
+
 
 
 \begin{knitrout}
@@ -385,6 +394,104 @@ qui sont attirés par son style, son design, ses couleurs.
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
 \includegraphics[width=\maxwidth]{figure/qualities_en-1} \caption[Qualités de la C4 Cactus selon les personnes ayant répondu au sondage anglais]{Qualités de la C4 Cactus selon les personnes ayant répondu au sondage anglais}\label{fig:qualities en}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/flaws_fr-1} \caption[Défauts de la C4 Cactus selon les personnes ayant répondu au sondage français]{Défauts de la C4 Cactus selon les personnes ayant répondu au sondage français}\label{fig:flaws fr}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/flaws_en-1} \caption[Défauts de la C4 Cactus selon les personnes ayant répondu au sondage anglais]{Défauts de la C4 Cactus selon les personnes ayant répondu au sondage anglais}\label{fig:flaws en}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/buy_fr-1} \caption[Proportion personnes ayant répondu au sondage français qui achèteraient une C4 Cactus]{Proportion personnes ayant répondu au sondage français qui achèteraient une C4 Cactus}\label{fig:buy fr}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/buy_en-1} \caption[Proportion personnes ayant répondu au sondage anglais qui achèteraient une C4 Cactus]{Proportion personnes ayant répondu au sondage anglais qui achèteraient une C4 Cactus}\label{fig:buy en}
+\end{figure}
+
+
+\end{knitrout}
+
+\section{La marque DS}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/ds_know_fr-1} \caption[Proportion personnes ayant répondu au sondage français sachant que DS était une marque indépendante]{Proportion personnes ayant répondu au sondage français sachant que DS était une marque indépendante}\label{fig:ds know fr}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/ds_know_en-1} \caption[Proportion personnes ayant répondu au sondage anglais sachant que DS était une marque indépendante]{Proportion personnes ayant répondu au sondage anglais sachant que DS était une marque indépendante}\label{fig:ds know en}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/brand_fr-1} \caption[Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage français]{Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage français}\label{fig:brand fr}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/brand_en-1} \caption[Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage anglais}\label{fig:brand en}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/preference_fr-1} \caption[Préférences de marque des personnes ayant répondu au sondage français]{Préférences de marque des personnes ayant répondu au sondage français}\label{fig:preference fr}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/preference_en-1} \caption[Préférences de marque des personnes ayant répondu au sondage anglais]{Préférences de marque des personnes ayant répondu au sondage anglais}\label{fig:preference en}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/differences_fr-1} \caption[Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage français]{Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage français}\label{fig:differences fr}
+\end{figure}
+
+
+\end{knitrout}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/differences_en-1} \caption[Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage anglais}\label{fig:differences en}
 \end{figure}
 
 
