Removing useless figures

--- a/main.tex
+++ b/main.tex
@@ -275,7 +275,12 @@ qui sont attirés par son style, son design, ses couleurs.
 
 \section{Âge et sexe}
 
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: sysfonts\\\#\# Loading required package: NLP}}\end{kframe}
+\end{knitrout}
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
